--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
         <div class="container-fluid">
             <div class="row-fluid">
                 <div class="span12">
-                    <div class="disclaimer">The notes and reflections in this site are my own.  This is entirely a work of my own and not in any way associated with my employer.  I am <a href="https://twitter.com/byrne_tweets">@byrne_tweets</a> on twitter.</div>
+                    <div class="disclaimer">mapLines is the work of mike byrne.</div>
                 </div>
             </div>
         </div>
