--- a/_layouts/maps.html
+++ b/_layouts/maps.html
@@ -10,7 +10,7 @@
         <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.34.0/mapbox-gl.css' rel='stylesheet' />
         <style>
             body { margin:0; padding:0; }
-            #map { position:absolute; top:0; bottom:0; width:100%; }
+            #map { position:relative; height:95%; width:75%; left:50px; top:100px;}
         </style>
         <div id='map'></div>
         <script>
