--- a/_layouts/maps.html
+++ b/_layouts/maps.html
@@ -3,6 +3,10 @@
 <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.34.0/mapbox-gl.js'></script>
 <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.34.0/mapbox-gl.css' rel='stylesheet' />
 
+<style>
+    body { margin:0; padding:0; }
+    #map { position:relative; top:10px; left:10px; width:75%; }
+</style>
 
 <div class="container-fluid">
     <div class="row-fluid">
