--- a/_layouts/maps.html
+++ b/_layouts/maps.html
@@ -3,24 +3,28 @@
 <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.34.0/mapbox-gl.js'></script>
 <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.34.0/mapbox-gl.css' rel='stylesheet' />
 
-<style>
-    body { margin:0; padding:0; }
-    #map { position:relative; top:10px; left:10px; width:75%; }
-</style>
 
-<div id='map'></div>
-<script>
-mapboxgl.accessToken = 'pk.eyJ1IjoiZmVvbWlrZSIsImEiOiJNRjJrRmRnIn0.Sc8mxXKYTRfgegc_3vjZiw';
-var map = new mapboxgl.Map({
-    container: 'map',
-    style: 'mapbox://styles/feomike/cj0zcunxh000m2sqb2epkabb4',
-    zoom: 12,
-    center: [-97.35,35.12]  
-});
-</script>
-
-
-
+<div class="container-fluid">
+    <div class="row-fluid">
+        <div class="span9">
+            <h2>{{ page.title }}</h2>
+            {{ content }}
+        </div>     
+    </div>
+    <div class="row-fluid">
+        <div class="span9">
+            <script>
+                mapboxgl.accessToken = 'pk.eyJ1IjoiZmVvbWlrZSIsImEiOiJNRjJrRmRnIn0.Sc8mxXKYTRfgegc_3vjZiw';
+                var map = new mapboxgl.Map({
+                    container: 'map',
+                    style: 'mapbox://styles/feomike/cj0zcunxh000m2sqb2epkabb4',
+                    zoom: 12,
+                    center: [-97.35,35.12]  
+                });
+            </script>
+        </div>
+    </div>
+</div>
  
 
 
