--- a/_layouts/maps.html
+++ b/_layouts/maps.html
@@ -17,7 +17,7 @@
 <script>
 mapboxgl.accessToken = 'pk.eyJ1IjoiZmVvbWlrZSIsImEiOiJNRjJrRmRnIn0.Sc8mxXKYTRfgegc_3vjZiw';
 var map = new mapboxgl.Map({
-    //container: 'map',
+    container: 'map',
     style: 'mapbox://styles/feomike/cj0zcunxh000m2sqb2epkabb4',
     zoom: 12,
     center: [-97.35,35.12]  
