--- a/_layouts/maps.html
+++ b/_layouts/maps.html
@@ -2,7 +2,10 @@
 
 <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.34.0/mapbox-gl.js'></script>
 <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.34.0/mapbox-gl.css' rel='stylesheet' />
-
+<style>
+    body { margin:0; padding:0; }
+    #map { position:absolute; top:0; bottom:0; width:100%; }
+</style>
 
 <div class="container-fluid">
     <div class="row-fluid">
