--- a/_layouts/maps.html
+++ b/_layouts/maps.html
@@ -22,7 +22,7 @@ mapboxgl.accessToken = 'pk.eyJ1IjoiZmVvbWlrZSIsImEiOiJNRjJrRmRnIn0.Sc8mxXKYTRfge
 var map = new mapboxgl.Map({
     container: 'map',
     style: 'mapbox://styles/feomike/cj0zcunxh000m2sqb2epkabb4',
-    zoom: {{ zoomscale }},
+    zoom: {{ post.zoomscale }},
     center: [-97.35,35.12]  
 });
 </script>
